--- a/price.html
+++ b/price.html
@@ -11,7 +11,7 @@
 < 本体>
   < div  class = " title1 " >
       < h1 >メニュー</ h1 >
-      < li >へたれ街道男前店徒歩2時間|すぐ眠くなる店主がやってる人気店（へたれクリニック）
+      < li >へたれ街道男前店徒歩2時間|すぐ眠くなる店主がやってる人気店（へたれクリニック)</li>
   </ title1 >    
 </ body >
 </ html >
